--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -97,4 +97,15 @@
         android:layout_alignStart="@+id/ratingBar2"
         android:id="@+id/switch1" />
 
+    <RadioButton
+        android:text="MyRadioIsChecked"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="28dp"
+        android:id="@+id/radioButton"
+        android:layout_below="@+id/switch1"
+        android:layout_alignLeft="@+id/switch1"
+        android:layout_alignStart="@+id/switch1"
+        android:checked="true" />
+
 </RelativeLayout>
